--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <link rel="stylesheet" href="./style.css">
 </head>
 <body>
+  <!-- Navbar -->
   <nav class="navbar">
     <div class="navbar-container container">
       <div class="hamburger-lines">
